[package]
name = "mssl"
version = "0.1.0"
authors = ["Wojciech Bartnik <yisonPylkita@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
test-case = "3.1.0"
